# mvn_ds

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .markdownlint.json  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  ai_instructions.md  run_benchmarks.sh
.github/workflows/: benchmark-check.yml  ci.yml  code-quality.yml  coverage.yml  doxygen-pages.yml  memory-check.yml
benchmarks/: CMakeLists.txt  run_benchmarks.sh
benchmarks/include/: mvn_ds_benchmark_utils.h
benchmarks/source/: mvn_ds_arr_benchmark.c  mvn_ds_hmap_benchmark.c  mvn_ds_primitives_benchmark.c  mvn_ds_string_benchmark.c
cmake/: mvnDsConfig.cmake.in
docs/: code_style.md
include/mvn_ds/: mvn_ds.h  mvn_ds_arr.h  mvn_ds_array.h  mvn_ds_hmap.h  mvn_ds_str.h  mvn_ds_string.h  mvn_ds_types.h  mvn_ds_utils.h
source/: mvn_ds.c  mvn_ds_arr.c  mvn_ds_array.c  mvn_ds_hmap.c  mvn_ds_str.c  mvn_ds_string.c
tests/: CMakeLists.txt
tests/include/: mvn_ds_arr_test.h  mvn_ds_array_test.h  mvn_ds_hmap_test.h  mvn_ds_primitives_test.h  mvn_ds_string_test.h  mvn_ds_test_utils.h
tests/source/: mvn_ds_arr_test.c  mvn_ds_array_test.c  mvn_ds_cpp_test.cpp  mvn_ds_hmap_test.c  mvn_ds_primitives_test.c  mvn_ds_str_test.c  mvn_ds_string_test.c
